# typesense/api/generator/openapi.yml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Typesense API
   description: "An open source search engine for building delightful search experiences."
-  version: 0.24.0
+  version: 0.25.0
 externalDocs:
   description: Find out more about Typsesense
   url: https://typesense.org
@@ -1768,6 +1768,12 @@ components:
             Multiple fields are separated with a comma.
           type: string
 
+        text_match_type:
+          description:
+            In a multi-field matching context, this parameter determines how the representative text match 
+            score of a record is calculated. Possible values are max_score (default) or max_weight.
+          type: string
+
         prefix:
           description:
             Boolean field to indicate that the last word in the query should
@@ -1849,6 +1855,16 @@ components:
 
         per_page:
           description: "Number of results to fetch per page. Default: 10"
+          type: integer
+
+        limit:
+          description: >
+            Number of hits to fetch. Can be used as an alternative to the per_page parameter. 
+            Default: 10.
+          type: integer
+
+        offset:
+          description: Identifies the starting point to return hits from a result set. Can be used as an alternative to the page parameter.
           type: integer
 
         group_by:
@@ -2060,6 +2076,12 @@ components:
             Multiple fields are separated with a comma.
           type: string
 
+        text_match_type:
+          description:
+            In a multi-field matching context, this parameter determines how the representative text match
+            score of a record is calculated. Possible values are max_score (default) or max_weight.
+          type: string
+
         prefix:
           description:
             Boolean field to indicate that the last word in the query should
@@ -2140,6 +2162,16 @@ components:
 
         per_page:
           description: "Number of results to fetch per page. Default: 10"
+          type: integer
+
+        limit:
+          description: >
+            Number of hits to fetch. Can be used as an alternative to the per_page parameter. 
+            Default: 10.
+          type: integer
+
+        offset:
+          description: Identifies the starting point to return hits from a result set. Can be used as an alternative to the page parameter.
           type: integer
 
         group_by:
